--- a/styles/knowledge.css
+++ b/styles/knowledge.css
@@ -163,3 +163,77 @@ header{
 .secondary-btn:hover{
      background: rgba(255, 255, 255, 0.1);
 }
+#item{
+    padding-top: 80px;
+}
+#item .item-container{
+    width: 85%;
+    max-width: 1360px;
+    margin: 0 auto;
+}
+.item-container .item-content{
+    text-align: center;
+    margin: 0 auto;
+}
+.item-content h1{
+    font-size: 48px;
+    color: #001931;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+.item-content p{
+    font-size: 16px;
+    line-height: 20px;
+    color: #627382;
+    margin-bottom: 44px;
+}
+.item-card{
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+
+}
+.item-info{
+    height: 300px;
+    width: 322px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.06);
+    padding-top: 69.5px;
+}
+.image{
+    width: 64px;
+    height: 64px;
+    background-color: #F95555;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 16px;
+    
+
+    
+}
+.image img{
+    
+    width: 32px;
+    height: 32px;
+    color: #FFFFFF;
+    object-fit: contain;
+    
+}
+.item-info h4{
+    margin-bottom: 16px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    color: #001931;
+}
+.item-info p{
+    font-size: 16px;
+    line-height: 20px;
+    color: #627382;
+    text-align: center;
+}
